--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <HEADER>
-    <h1>  eu sou lindo...................</h1>
+        <div id="a">
+            <a href="https://youtu.be/QRY1aMMcFzA?si=m_xngOxNUEQ8mxqO">s</a>
+            <a href="https://youtu.be/QRY1aMMcFzA?si=m_xngOxNUEQ8mxqO">w</a>
+            <a href="https://youtu.be/QRY1aMMcFzA?si=m_xngOxNUEQ8mxqO">a</a>
+        </div>
+        <div id="b">
+    <h1>  eu sou lindo..................:)</h1>
+        <audio src="SYMPHONY ｜ CLEAN BANDIT FT. ZARA LARSSON ｜ 1HOUR LOOP.mp3" controls></audio></div>
     </HEADER>
     <main class="container">
        <h2> eu sou GOSTOSOOOOOOOOOOOO
@@ -35,6 +42,7 @@
         OOOOOOOOOOOOOOOOOOOOOOOOOOOOO
         OOOOOOOOOOOOOOOOOOOOOOOOOOOOO
         OOOOOOOOOOOOOOOOOOOOOOOOOOOOO</h2>
+
     </main>
     
 </body>
